--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0-beta.3",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "jotai": "^2.12.3",
     "lodash": "^4.17.21",
     "react": "^19.0.0",
