Add flight results summary

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -23,6 +23,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     /* alias paths */
     "paths": {
       "@/*": [
